--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -1,7 +1,7 @@
 body, html {
       margin:0;
       height:100%;
-      background: #42a5f5;
+      background: #D6D6BB;
 }
 
 .center {
@@ -32,6 +32,6 @@ body, html {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background: #42a5f5;
+    background: #D6D6BB;
   }
 }
